force-app/main/default/objects/Opportunity/fields/Client_Average_days__c.field-meta.xml
<CustomField>
    <fullName>Client_Average_days__c</fullName>
    <label>Client Average days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>