force-app/main/default/objects/Opportunity/fields/Client_Average_Transaction_per_month__c.field-meta.xml
<CustomField>
    <fullName>Client_Average_Transaction_per_month__c</fullName>
    <label>Client Average Transaction per month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>