force-app/main/default/objects/Opportunity/fields/Client_Largest_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Client_Largest_Transaction_Value__c</fullName>
    <label>Client Largest Transaction Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>