force-app/main/default/objects/Opportunity/fields/Client_Number_of_Customers__c.field-meta.xml
<CustomField>
    <fullName>Client_Number_of_Customers__c</fullName>
    <label>Client Number of Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>