force-app/main/default/objects/Opportunity/fields/Client_Transactions_Near_Max_Amt__c.field-meta.xml
<CustomField>
    <fullName>Client_Transactions_Near_Max_Amt__c</fullName>
    <description>Indicator how many transactions do customer expect to process near maximum amount.</description>
    <label>Client Transactions Near Max Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>