force-app/main/default/objects/Opportunity/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to the CSA created</inlineHelpText>
    <label>CSA</label>
    <referenceTo>CSA__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>