force-app/main/default/objects/Opportunity/fields/EF_Number_of_terminals__c.field-meta.xml
<CustomField>
    <fullName>EF_Number_of_terminals__c</fullName>
    <label>Number of terminals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>