force-app/main/default/objects/Opportunity/fields/IsClosed_CSA_Date__c.field-meta.xml
<CustomField>
    <fullName>IsClosed_CSA_Date__c</fullName>
    <description>Date the CSA is submitted by the client for processing</description>
    <encryptionScheme>None</encryptionScheme>
    <label>IsClosed CSA - Date</label>
    <type>Date</type>
</CustomField>