force-app/main/default/objects/Opportunity/fields/isClosedAddProduct__c.field-meta.xml
<CustomField>
    <fullName>isClosedAddProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isClosedAddProduct</label>
    <type>Checkbox</type>
</CustomField>