force-app/main/default/objects/Opportunity/fields/isClosedCSA__c.field-meta.xml
<CustomField>
    <fullName>isClosedCSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isClosedCSA</label>
    <type>Checkbox</type>
</CustomField>