force-app/main/default/objects/Opportunity/fields/Multiple_EFTPOS_Users__c.field-meta.xml
<CustomField>
    <fullName>Multiple_EFTPOS_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <description>when value is true, there will be more than one biller on your EFTPOS terminal/s</description>
    <label>Multiple EFTPOS Users</label>
    <type>Checkbox</type>
</CustomField>