force-app/main/default/objects/Opportunity/fields/Partner_Referred_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Referred_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account of the Partner that sent us the lead.</description>
    <label>Partner Referred Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Referred Accounts)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>