force-app/main/default/objects/Opportunity/fields/Payments_way__c.field-meta.xml
<CustomField>
    <fullName>Payments_way__c</fullName>
    <label>Payments way</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>My product/service is provided to the customer in full before any payment is taken</fullName>
            </value>
            <value>
                <fullName>I take payments before or during my product/service delivery to the customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>