force-app/main/default/objects/Opportunity/fields/Product_Requested__c.field-meta.xml
<CustomField>
    <fullName>Product_Requested__c</fullName>
    <label>Product Requested</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Debit</fullName>
            </value>
            <value>
                <fullName>eCommerce</fullName>
            </value>
            <value>
                <fullName>BPAY</fullName>
            </value>
            <value>
                <fullName>Xero - RealTime</fullName>
            </value>
            <value>
                <fullName>Xero - BPAY</fullName>
            </value>
            <value>
                <fullName>EFTPOS</fullName>
            </value>
            <value>
                <fullName>EFTPOS (SmartPay)</fullName>
            </value>
            <value>
                <fullName>Visa/MasterCard (Real Time)</fullName>
            </value>
            <value>
                <fullName>Visa/MasterCard</fullName>
            </value>
            <value>
                <fullName>Amex / Diners (RealTime)</fullName>
            </value>
            <value>
                <fullName>SoftPOS</fullName>
            </value>
            <value>
                <fullName>Bank Account (Direct Debit)</fullName>
            </value>
            <value>
                <fullName>AMEX/Diners</fullName>
            </value>
            <value>
                <fullName>PayTo</fullName>
            </value>
            <value>
                <fullName>Eway PF Visa/Mastercard</fullName>
            </value>
            <value>
                <fullName>Eway PF Amex</fullName>
            </value>
            <value>
                <fullName>EFTPOS Amex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>