force-app/main/default/objects/Opportunity/fields/Public_Contact__c.field-meta.xml
<CustomField>
    <fullName>Public_Contact__c</fullName>
    <label>Public Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Preferred Contact</fullName>
            </value>
            <value>
                <fullName>Add Public Contact Information</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>