force-app/main/default/objects/Opportunity/fields/Software__c.field-meta.xml
<CustomField>
    <fullName>Software__c</fullName>
    <label>Software</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>365 Mechanix</fullName>
            </value>
            <value>
                <fullName>Accelerware</fullName>
            </value>
            <value>
                <fullName>Active Billing</fullName>
            </value>
            <value>
                <fullName>Active World</fullName>
            </value>
            <value>
                <fullName>AgilityCIS</fullName>
            </value>
            <value>
                <fullName>AimyPlus</fullName>
            </value>
            <value>
                <fullName>Alphasys</fullName>
            </value>
            <value>
                <fullName>AnytimeOffice</fullName>
            </value>
            <value>
                <fullName>Appello</fullName>
            </value>
            <value>
                <fullName>ASI</fullName>
            </value>
            <value>
                <fullName>Avocado</fullName>
            </value>
            <value>
                <fullName>AX3 Group</fullName>
            </value>
            <value>
                <fullName>Bark.com</fullName>
            </value>
            <value>
                <fullName>Baseplan</fullName>
            </value>
            <value>
                <fullName>Becklyn</fullName>
            </value>
            <value>
                <fullName>Better Clinics</fullName>
            </value>
            <value>
                <fullName>BIT</fullName>
            </value>
            <value>
                <fullName>Business of Motion</fullName>
            </value>
            <value>
                <fullName>Centaman</fullName>
            </value>
            <value>
                <fullName>Cerebiz</fullName>
            </value>
            <value>
                <fullName>Cirrus Technologies</fullName>
            </value>
            <value>
                <fullName>Clearwater</fullName>
            </value>
            <value>
                <fullName>Client Connect</fullName>
            </value>
            <value>
                <fullName>Clouding Around</fullName>
            </value>
            <value>
                <fullName>Clubworx</fullName>
            </value>
            <value>
                <fullName>Concise Digital</fullName>
            </value>
            <value>
                <fullName>Console Gateway</fullName>
            </value>
            <value>
                <fullName>CyberSource Direct</fullName>
            </value>
            <value>
                <fullName>DanceStudio-Pro</fullName>
            </value>
            <value>
                <fullName>DebtCol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>